# subtitle-medic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
acceptance/: EVIDENCE.md  scenarios.md  test_acceptance.py
examples/: check_demo.py  fix_demo.py  glossary.txt  sample.srt  sample.vtt
src/subtitle_medic/: __init__.py  cli.py  corrector.py  glossary.py  model.py  parser.py  report.py  rules.py
tests/: conftest.py  test_cli.py  test_corrector.py  test_examples.py  test_glossary.py  test_model.py  test_parser.py  test_report.py  test_rules.py
