[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subtitle-medic"
version = "0.1.0"
description = "Caption QA + correction agent: deterministic SRT/WebVTT rule checks plus cue-scoped LLM corrections, built on replykit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Edgar Hernandez", email = "edgarhernandez00@gmail.com" }]
keywords = ["subtitles", "captions", "srt", "webvtt", "qa", "llm", "agent", "replykit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "replykit>=0.1.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/eggy-sh/subtitle-medic"
Repository = "https://github.com/eggy-sh/subtitle-medic"

[project.scripts]
subtitle-medic = "subtitle_medic.cli:main"

[project.optional-dependencies]
# Optional provider adapters, surfaced through replykit's extras so the LLM
# `fix` path can talk to a real model. The core import and rule checks never
# need these.
anthropic = ["replykit[anthropic]>=0.1.0"]
openai = ["replykit[openai]>=0.1.0"]
ollama = ["replykit[ollama]>=0.1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/subtitle_medic"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Typer's documented pattern *requires* calling typer.Option/Argument in
# parameter defaults; B008 ("function call in default argument") is a false
# positive for this idiom.
"src/subtitle_medic/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["subtitle_medic"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
